ui & backend changes phase 2